--- a/src/app/components/clientes/clientes-dialog/clientes-dialog.component.css
+++ b/src/app/components/clientes/clientes-dialog/clientes-dialog.component.css
@@ -1,3 +1,8 @@
-.icono-dialog {
-    margin-right: 5px;
+.icono-btn {
+  margin-right: 6px;
+  font-size: 20px;
+}
+
+.titulo-h3{
+  font-size: 20px;
 }
