--- a/src/app/components/almacen/almacen-dialog/almacen-dialog.component.html
+++ b/src/app/components/almacen/almacen-dialog/almacen-dialog.component.html
@@ -29,21 +29,17 @@
             <div class="row">
                 <div class="form-group col-md-6">
                     <label for="tipo" class="form-label">Tipo extintor</label>
-                    <select class="form-control" name="tipo" id="tipo" [disabled]="tipoExt?.length === 0" [class.is-invalid]="tipo.invalid && tipo.touched" [(ngModel)]="inventariado.tipo" #tipo="ngModel" required>
-                    <option *ngFor="let item2 of tipoExt" [value]="item2.tipo_Extintor">{{item2.tipo_Extintor}} </option>
+                    <select class="form-control" name="tipo" id="tipo" [disabled]="tipoExt?.length === 0"  [(ngModel)]="inventariado.idTipoExtintor" #tipo="ngModel" >
+                    <option *ngFor="let item2 of tipoExt" [value]="item2.idTipoExtintor">{{item2.tipo_Extintor}} </option>
                     </select>
-                    <small *ngIf="tipo.invalid && tipo.touched" class="form-text text-danger">
-                     Este campo es obligatorio
-                    </small>
+
                 </div>
                 <div class="form-group col-md-6">
                     <label for="pesoXlibras" class="form-label">Peso extintor</label>
-                    <select class="form-control" name="pesoXlibras" id="pesoXlibras" [disabled]="pesoExt?.length === 0" [class.is-invalid]="pesoXlibras.invalid && pesoXlibras.touched" [(ngModel)]="inventariado.pesoXlibras" #pesoXlibras="ngModel" required>
-                    <option *ngFor="let item2 of pesoExt" [value]="item2.pesoXlibras">{{item2.pesoXlibras}} </option>
+                    <select class="form-control" name="pesoXlibras" id="pesoXlibras" [disabled]="pesoExt?.length === 0" [(ngModel)]="inventariado.idPesoExtintor" #pesoXlibras="ngModel" >
+                    <option *ngFor="let item2 of pesoExt" [value]="item2.idPesoExtintor">{{item2.pesoXlibras}} </option>
                     </select>
-                    <small *ngIf="pesoXlibras.invalid && pesoXlibras.touched" class="form-text text-danger">
-                     Este campo es obligatorio
-                    </small>
+
                 </div>
             </div>
             <div class="row">
@@ -56,10 +52,8 @@
                 </div>
                 <div class="form-group col-md-6">
                     <label for="fechaV" class="form-label">Fecha V</label>
-                    <input class="form-control" type="date" name="fechaVencimiento" id="fechaV" [class.is-invalid]="fechaVencimiento. invalid && fechaVencimiento.touched" [(ngModel)]="inventariado.fechaVencimiento" #fechaVencimiento="ngModel" required>
-                    <small *ngIf="fechaVencimiento.invalid && fechaVencimiento.touched" class="form-text text-danger">
-                    Este campo es obligatorio
-                    </small>
+                    <input class="form-control" type="date" name="fechaVencimiento" id="fechaV"  [(ngModel)]="inventariado.fechaVencimiento" #fechaVencimiento="ngModel" >
+
                 </div>
             </div>
         </form>
