--- a/src/app/components/clientes/clientes-dialog/clientes-dialog.component.html
+++ b/src/app/components/clientes/clientes-dialog/clientes-dialog.component.html
@@ -1,7 +1,7 @@
 <p-dialog [(visible)]="displayPosition" [position]="position" [breakpoints]="{'960px': '75vw', '640px':     '90vw'}" [modal]="true" [style]="{width: '70vw'} " [baseZIndex]="2" [draggable]="false" [resizable]="false" [closable]="false">
     <ng-template pTemplate="header">
         <h3 class="titulo-h3">
-            <i class="pi pi-list icono-dialog"></i> AGREGAR CLIENTE
+            <i class="pi pi-users icono-btn"></i> AGREGAR CLIENTE
         </h3>
     </ng-template>
     <div class="form">
