--- a/src/app/components/creditos/creditos.component.css
+++ b/src/app/components/creditos/creditos.component.css
@@ -9,23 +9,32 @@
 }
 
 .contenedor2 {
-  margin-top: -10px;
+  margin-top: 10px;
+  padding-left: -15px;
   margin-bottom: 10px;
 }
 
+/* titulo principal */
+
 .titulo-prin {
     text-transform: uppercase;
-    margin-top: 0px;
-    margin-left: 10px;
-    padding-top: 15px;
+    font-size: 30px;
+    margin-top: 15px;
 }
 
+
+/* boton agregar */
+
 .btn-servicio {
-  width: 150px;
+  width: 200px;
   height: 40px;
-  margin-left: 15px;
-  font-size: 13px;
+  font-size: 16px;
   text-transform: uppercase;
+}
+
+.icono-btn {
+  margin-right: 8px;
+  font-size: 16px;
 }
 
 
@@ -35,12 +44,8 @@
   margin-top: 20px;
 }
 
-.abc {
-  margin-right: 15px;
-}
-
 .div-boton {
-  margin-left: 5px;
+  margin-left: 10px;
 }
 
 .imput-buscar {
@@ -116,9 +121,7 @@
     width: 100%;
 }
 
-.icono-btn {
-    margin-right: 6px;
-}
+
 
 @media screen and (max-width: 900px) and (min-width:180px) {
     p-table {
