--- a/src/app/components/creditos/dialog-service/dialog-service.component.html
+++ b/src/app/components/creditos/dialog-service/dialog-service.component.html
@@ -1,7 +1,7 @@
 <p-dialog [(visible)]="displayPosition" [position]="position" [breakpoints]="{'960px': '75vw', '640px': '90vw'}" [modal]="true" [style]="{width: '70vw'} " [baseZIndex]="2" [draggable]="false" [resizable]="false" [closable]="false">
   <ng-template pTemplate="header">
       <h3 class="titulo-h3">
-          <i class="pi pi-dollar "></i> DATOS DE PRECIO
+        <i class="pi pi-credit-card icono-btn"></i> DATOS DE CREDITO
       </h3>
   </ng-template>
   <div class="form">
