--- a/src/app/components/extintor/peso-extintor/peso-extintor.component.html
+++ b/src/app/components/extintor/peso-extintor/peso-extintor.component.html
@@ -1,8 +1,9 @@
 <p-dialog [(visible)]="displayPeso" [position]="positionPeso" [breakpoints]="{'960px': '75vw', '640px':     '90vw'}" [modal]="true" [style]="{width: '40vw'} " [baseZIndex]="2" [draggable]="false" [resizable]="false" [closable]="false">
     <ng-template pTemplate="header">
-        <h3 class="titulo-h3">
-            PESO EXTINTOR
-        </h3>
+      <h3 class="titulo-h3">
+        <i class="fas fa-fire-extinguisher icon-nav"></i>
+          PESO EXTINTOR
+      </h3>
     </ng-template>
     <div class="form">
         <form name="formu" id="formu" novalidate #formu="ngForm" autocomplete="off">
