--- a/src/app/components/extintor/peso-extintor/peso-extintor.component.css
+++ b/src/app/components/extintor/peso-extintor/peso-extintor.component.css
@@ -7,6 +7,11 @@ p-button {
     margin-bottom: 5px;
 }
 
-.icon-nav{
-  margin-right: 5px;
+.icono-btn{
+  margin-right: 6px;
+  font-size: 20px;
+}
+
+.titulo-h3{
+  font-size: 20px;
 }
