--- a/src/app/components/factura/factura.component.html
+++ b/src/app/components/factura/factura.component.html
@@ -1,7 +1,13 @@
 <div class="contenedor">
-    <div>
-        <h1 class="tituloPincipal">Facturación de servicio</h1>
+
+    <div class="row">
+      <div class="col-md-12">
+        <h2 class="tituloPincipal">
+          Facturación de servicio
+        </h2>
+      </div>
     </div>
+
     <div class="row">
         <div class="col-md-12">
             <form name="form" id="form" novalidate autocomplete="off" #form="ngForm">
