--- a/src/app/components/precios/precio-dialog/precio-dialog.component.css
+++ b/src/app/components/precios/precio-dialog/precio-dialog.component.css
@@ -1,3 +1,14 @@
+
+.icono-btn {
+  margin-right: 6px;
+  font-size: 20px;
+}
+
+.titulo-h3{
+  font-size: 20px;
+}
+
+
 p-button {
     margin-bottom: 5px;
     margin-top: 5px;
