--- a/src/app/components/almacen/almacen.component.css
+++ b/src/app/components/almacen/almacen.component.css
@@ -4,29 +4,25 @@
      box-sizing: border-box;
  }
 
- .contenedor-dos {
-     margin-top: -10px;
-     margin-bottom: 10px;
- }
-
  .titulo-prin {
      text-transform: uppercase;
-     margin-top: 0px;
+     margin-top: 15px;
      margin-left: 15px;
+     font-size: 30px;
  }
 
- .btn-emple {
-     width: 170px;
+ .btn-inventario {
+     width: 200px;
      height: 40px;
      margin-left: 15px;
-     font-size: 13px;
+     font-size: 16px;
      color: #ffffff;
      text-transform: uppercase;
  }
 
  .icono-btn {
-     font-size: 13px;
-     margin-right: 6px;
+     font-size: 16px;
+     margin-right: 8px;
  }
 
 
@@ -34,14 +30,11 @@
 
   .divBuscador{
     margin-top: 20px;
+    margin-left: 15px;
   }
 
- .abc {
-     margin-right: 15px;
- }
-
  .div-boton {
-     margin-left: 5px;
+     margin-left: 10px;
  }
 
  .imput-buscar {
