--- a/src/app/components/empleados/empleados.component.html
+++ b/src/app/components/empleados/empleados.component.html
@@ -1,25 +1,29 @@
 <div class="contenedor">
-    <div>
+    <div class="row">
+      <div class="col-md-12">
         <h2 class="titulo-prin">
             Lista de empleados
         </h2>
+      </div>
     </div>
-    <div class="contenedor-dos">
+
+    <div class="row">
         <div class="col-md-12">
-            <div class="btn">
                 <button (click)="showPositionDialog(employee)" type="button" class="btn btn-primary btn-emple">
               <i class="pi pi-user-plus icono-btn"></i>Agregar empleado</button>
-            </div>
+
             <app-agregar-dialog #agregarDialog (newEmployeeEvent)="addItem($event)"></app-agregar-dialog>
         </div>
     </div>
 
     <div class="row divBuscador">
-        <div class="col-md-4 ml-3 mb-2 abc">
+        <div class="col-md-4">
             <input type="search" placeholder="Ingresar Nombre" id="buscador" name="buscador" class="form-control imput-buscar" [value]="buscarNombre" (input)="buscarNombre = $event.target.value">
         </div>
         <div class="col-md-1 div-boton">
-            <button class="btn btn-primary boton-buscar" (click)="buscarEmpleado()">Buscar</button>
+            <button class="btn btn-primary boton-buscar" (click)="buscarEmpleado()">
+              <i class="pi pi-search icono-btn"></i>
+            </button>
         </div>
     </div>
 
