--- a/src/app/components/empresa/empresa-diaolg/empresa-diaolg.component.html
+++ b/src/app/components/empresa/empresa-diaolg/empresa-diaolg.component.html
@@ -1,7 +1,7 @@
 <p-dialog [(visible)]="displayPosition" [position]="position" [breakpoints]="{'960px': '75vw', '640px':     '90vw'}" [modal]="true" [style]="{width: '70vw'} " [baseZIndex]="2" [draggable]="false" [resizable]="false" [closable]="false">
     <ng-template pTemplate="header">
         <h3 class="titulo-h3">
-            <i class="pi pi-plus "></i> AGREGAR EMPRESA
+            <i class="pi pi-home icono-btn "></i> AGREGAR EMPRESA
         </h3>
     </ng-template>
     <div class="form">
