--- a/src/app/components/empresa/empresa.component.css
+++ b/src/app/components/empresa/empresa.component.css
@@ -8,24 +8,22 @@
     text-transform: uppercase;
     margin-top: 15px;
     margin-left: 15px;
-}
-
-.contenedor-dos {
-    margin-top: -10px;
-    margin-left: 15px;
-    margin-bottom: 15px;
+    font-size: 30px;
 }
 
 .btn-empresa {
-    width: 170px;
+    width: 200px;
     height: 40px;
-    font-size: 13px;
+    margin-left: 15px;
+    font-size: 16px;
+    color: #ffffff;
     text-transform: uppercase;
+    margin-bottom: 20px;
 }
 
 .icono-btn {
-    font-size: 13px;
-    margin-right: 6px;
+    font-size: 16px;
+    margin-right:8px;
 }
 
 p-toast {
