--- a/src/app/components/empresa/empresa.component.html
+++ b/src/app/components/empresa/empresa.component.html
@@ -1,80 +1,85 @@
 <div class="contenedor">
-    <div>
-        <h2 class="titulo-prin">
-            <span>Información de la empresa</span>
-        </h2>
-    </div>
-    <div class="contenedor-dos">
-        <div class="col-md-12">
-            <div class="btn">
-                <button (click)="showPositionDialog(empresaModel)" type="button" class="btn btn-primary btn-empresa">
-            <i class="pi pi-user-plus icono-btn"></i>Agregar empresa</button>
-            </div>
-            <app-empresa-diaolg #agregarDialogEmpresa (verEmpresa)="addItem($event)"></app-empresa-diaolg>
-        </div>
-    </div>
-    <div class="row">
-        <div class="col-md-12">
-            <div class="img">
-                <div class="row img1">
-                    <div class="col-md-12">
-                        <img src="./assets/img/bomberos.jpeg" alt="icono bomberos de Amalfi">
-                        <img src="./assets/img/contrariesgo.jpeg" alt="icono Contrariesgo">
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="col-md-12">
-            <div class="card">
-                <p-table [(value)]="empresa" [paginator]="true" [rows]="10" [showCurrentPageReport]="true" [rowHover]="true" currentPageReportTemplate="Item {first} al {last} de {totalRecords} Items" [rowsPerPageOptions]="[5,8,10,25,50]">
-                    <ng-template pTemplate="header">
-                        <tr class="header">
-                            <th class="identificador"> # </th>
-                            <th> Nombre </th>
-                            <th> Dirección </th>
-                            <th> Teléfono </th>
-                            <th> Email </th>
-                            <th> Nit </th>
-                            <th></th>
-                        </tr>
-                    </ng-template>
-                    <ng-template pTemplate="body" let-empresa>
-                        <tr>
-                            <td data-titulo="#"> {{ empresa.idEmpresa }} </td>
-                            <td data-titulo="Nombre"> {{ empresa.nombre }} </td>
-                            <td data-titulo="Dirección"> {{ empresa.direccion }} </td>
-                            <td data-titulo="Teléfono"> {{ empresa.telefono }} </td>
-                            <td data-titulo="Email"> {{ empresa.email }} </td>
-                            <td data-titulo="Nit"> {{ empresa.nit }} </td>
-                            <td class="td-iconos">
-                                <i (click)="showPositionDialog(empresa)" class="pi pi-pencil btn-outline-primary icono-table"></i>
-                                <i (click)="confirmarElimEmpresa(empresa)" class="pi pi-trash btn-outline-danger icono-table"></i>
-                            </td>
-                        </tr>
-                    </ng-template>
-                </p-table>
-            </div>
-        </div>
-    </div>
-    <p-toast [style]="{width: '80vw'}"></p-toast>
 
-    <p-toast position="center" (onClose)="onReject()" key="a"  [baseZIndex]="5000">
-      <ng-template let-message pTemplate="message">
-          <div class="p-flex p-flex-column" style="flex: 1">
-              <div class="p-text-center-botones">
-                  <i class="pi pi-exclamation-triangle" style="font-size: 3rem"></i>
-                  <h4>{{message.summary}}</h4>
-                  <p>{{message.detail}}</p>
-              </div>
-              <div class="row botonesConfirmacion ">
-                  <div class="col-md-6">
-                      <button type="button" pButton (click)="eliminarEmpresaId(producto)" label="Yes" class="p-button-success buttonSuccess"></button>
-                  </div>
-                  <div class="col-md-6">
-                      <button type="button" pButton (click)="onReject()" label="No" class="p-button-secondary buttonSecondary"></button>
-                  </div>
-              </div>
+  <div class="row">
+    <div class="col-md-12">
+      <h2 class="titulo-prin">
+          <span>Información de la empresa</span>
+      </h2>
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="col-md-12">
+      <button (click)="showPositionDialog(empresaModel)" type="button" class="btn btn-primary btn-empresa">
+        <i class="pi pi-home icono-btn"></i>Agregar empresa
+      </button>
+      <app-empresa-diaolg #agregarDialogEmpresa (verEmpresa)="addItem($event)"></app-empresa-diaolg>
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="col-md-12">
+      <div class="img">
+        <div class="row img1">
+          <div class="col-md-12">
+            <img src="./assets/img/bomberos.jpeg" alt="icono bomberos de Amalfi">
+            <img src="./assets/img/contrariesgo.jpeg" alt="icono Contrariesgo">
           </div>
-        </ng-template>
-    </p-toast>
+        </div>
+      </div>
+    </div>
+    <div class="col-md-12">
+      <div class="card">
+        <p-table [(value)]="empresa" [paginator]="true" [rows]="10" [showCurrentPageReport]="true" [rowHover]="true" currentPageReportTemplate="Item {first} al {last} de {totalRecords} Items" [rowsPerPageOptions]="[5,8,10,25,50]">
+          <ng-template pTemplate="header">
+            <tr class="header">
+              <th class="identificador"> # </th>
+              <th> Nombre </th>
+              <th> Dirección </th>
+              <th> Teléfono </th>
+              <th> Email </th>
+              <th> Nit </th>
+              <th></th>
+            </tr>
+          </ng-template>
+          <ng-template pTemplate="body" let-empresa>
+            <tr>
+              <td data-titulo="#"> {{ empresa.idEmpresa }} </td>
+              <td data-titulo="Nombre"> {{ empresa.nombre }} </td>
+              <td data-titulo="Dirección"> {{ empresa.direccion }} </td>
+              <td data-titulo="Teléfono"> {{ empresa.telefono }} </td>
+              <td data-titulo="Email"> {{ empresa.email }} </td>
+              <td data-titulo="Nit"> {{ empresa.nit }} </td>
+              <td class="td-iconos">
+                  <i (click)="showPositionDialog(empresa)" class="pi pi-pencil btn-outline-primary icono-table"></i>
+                  <i (click)="confirmarElimEmpresa(empresa)" class="pi pi-trash btn-outline-danger icono-table"></i>
+              </td>
+            </tr>
+          </ng-template>
+        </p-table>
+      </div>
+    </div>
+  </div>
+
+  <p-toast [style]="{width: '80vw'}"></p-toast>
+
+  <p-toast position="center" (onClose)="onReject()" key="a"  [baseZIndex]="5000">
+    <ng-template let-message pTemplate="message">
+      <div class="p-flex p-flex-column" style="flex: 1">
+        <div class="p-text-center-botones">
+          <i class="pi pi-exclamation-triangle" style="font-size: 3rem"></i>
+          <h4>{{message.summary}}</h4>
+          <p>{{message.detail}}</p>
+        </div>
+        <div class="row botonesConfirmacion ">
+          <div class="col-md-6">
+            <button type="button" pButton (click)="eliminarEmpresaId(producto)" label="Yes" class="p-button-success buttonSuccess"></button>
+          </div>
+          <div class="col-md-6">
+            <button type="button" pButton (click)="onReject()" label="No" class="p-button-secondary buttonSecondary"></button>
+          </div>
+        </div>
+      </div>
+      </ng-template>
+  </p-toast>
 </div>
