--- a/src/app/components/extintor/tipo-extintor/tipo-extintor.component.html
+++ b/src/app/components/extintor/tipo-extintor/tipo-extintor.component.html
@@ -1,7 +1,7 @@
 <p-dialog [(visible)]="display" [position]="position" [breakpoints]="{'960px': '75vw', '640px':     '90vw'}" [modal]="true" [style]="{width: '40vw'} " [baseZIndex]="2" [draggable]="false" [resizable]="false" [closable]="false">
     <ng-template pTemplate="header">
         <h3 class="titulo-h3">
-          <i class="fas fa-fire-extinguisher icon-nav"></i>
+          <i class="fas fa-fire-extinguisher icono-btn"></i>
           TIPO EXTINTOR
         </h3>
     </ng-template>
