--- a/src/app/components/factura/factura.component.css
+++ b/src/app/components/factura/factura.component.css
@@ -9,9 +9,11 @@
 }
 
 .tituloPincipal {
-    margin-bottom: 10px;
-    margin-left: 5px;
-    text-transform: uppercase;
+  text-transform: uppercase;
+  font-size: 30px;
+  margin-bottom: 10px;
+  margin-left: 5px;
+  margin-top: 15px;
 }
 
 .subtitulo {
