--- a/src/app/components/gastos/dialog-gasto/dialog-gasto.component.css
+++ b/src/app/components/gastos/dialog-gasto/dialog-gasto.component.css
@@ -1,5 +1,10 @@
-.input-error {
-    border-color: red;
+.icono-btn {
+    margin-right: 6px;
+    font-size: 20px;
+}
+
+.titulo-h3{
+  font-size: 20px;
 }
 
 p-button {
