--- a/src/app/components/productos/productos-dialog/productos-dialog.component.css
+++ b/src/app/components/productos/productos-dialog/productos-dialog.component.css
@@ -5,6 +5,12 @@
     }
 }
 
-h3 {
-    text-transform: uppercase;
+.icono-btn{
+  margin-right: 6px;
+  font-size: 20px;
+}
+
+.titulo-h3{
+  font-size: 20px;
+  text-transform: uppercase;
 }
