--- a/src/app/components/productos/productos-dialog/productos-dialog.component.html
+++ b/src/app/components/productos/productos-dialog/productos-dialog.component.html
@@ -1,7 +1,7 @@
 <p-dialog [(visible)]="displayPosition" [position]="position" [breakpoints]="{'960px': '75vw', '640px':     '90vw'}" [modal]="true" [style]="{width: '70vw'} " [baseZIndex]="2" [draggable]="false" [resizable]="false" [closable]="false">
     <ng-template pTemplate="header">
         <h3 class="titulo-h3">
-            <i class="pi pi-list "></i> datos productos
+            <i class="pi pi-list icono-btn"></i> datos productos
         </h3>
     </ng-template>
     <div class="form">
