--- a/src/app/components/servicios/servicios.component.css
+++ b/src/app/components/servicios/servicios.component.css
@@ -4,15 +4,12 @@
     box-sizing: border-box;
 }
 
-.contenedor {
-    margin: 15px;
-}
-
 .titulo-prin {
     text-transform: uppercase;
-    margin-top: 0px;
-    margin-left: 10px;
-    padding-top: 15px;
+    margin-top: 15px;
+    margin-bottom: 0px;
+    margin-left: 15px;
+    font-size: 30px;
 }
 
 .titulo-h3 i {
@@ -24,8 +21,8 @@
 
 .card {
     margin-top: 20px;
-    margin-left: 0px;
-    margin-right: 0px;
+    margin-left: 15px;
+    margin-right: 15px;
     border-left: 0;
     border-right: 0;
     border-top: 0;
