--- a/src/app/components/factura/factura.component.html
+++ b/src/app/components/factura/factura.component.html
@@ -133,8 +133,8 @@
                 </div>
 
                 <div class="btnform-servicio">
-                    <button (click)="agregarDetalle(form)" type="button" class="btn btn-primary btn-servicio">Agregar</button>
-                    <button (click)="guardarServicio(form)" type="button" class="btn btn-secondary btn-servicio">Guardar</button>
+                  <button (click)="agregarDetalle(form)" type="button" class="btn btn-primary btn-servicio">Agregar</button>
+                  <button (click)="guardarServicio(form)" type="button" class="btn btn-secondary btn-servicio">Guardar</button>
                 </div>
             </form>
         </div>
@@ -208,5 +208,7 @@
             </p-table>
         </div>
     </div>
+
+    <p-toast position="top-center"></p-toast>
 
 </div>
